# Applied-Machine-Learning-for-Health-and-Fitness

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: Ch10_ReinforcementLearning.ipynb  Ch11_MachineLearningInTheCloud.ipynb  Ch12_MLAutomation.ipynb  Ch2_PhysicsOfSports.ipynb  Ch3_DataScientistToolbox.ipynb  Ch4_NeuralNetworks.ipynb  Ch5_Sensors.ipynb  Ch7_2DBodyPoseEstimation.ipynb  Ch9_VideoActionRecognition.ipynb
utils/activity-classification/: register_model.py  score.py  train.py
utils/bullet/: pdControl.py  pdControllerExplicit.py  pdControllerStable.py
utils/deepdream/: deepdream.py
utils/face/: face_detection.ipynb
utils/gym/: gymbullet.py  gymplot.py
utils/keypoints/: pose.py  utils.py
utils/kinetics/: kinetics.py
utils/opencv/: gen_pattern.py  svgfig.py
utils/pose3d/: pose3d.py
utils/pose3dn/: demo.py  main.py
utils/pose3dn/tools/: eval_COCO.py  eval_PCKh.py
utils/video_classification/: first_clip_sampler.py  helpers.py  scheduler.py  train.py  transforms.py  utils.py
